# isogen-minimal-example

./: README.md  check.sh  ghc-802.yaml  isogen-minimal-example.cabal  stack.yaml
src/: ExternalStuff.hs
src/Data/THGen/: XML.hs
src/Text/XML/: Node.hs  ParentAttributes.hs
test/: ExternalStuff.hs  Main.hs  TestDefs.hs
