name:                isogen-minimal-example
version:             0.2.1
synopsis:            Generate XML-isomorphic types
description:
    TemplateHaskell generators for XML-isomorphic data types, including
    instances for parsing and rendering. A convenient DSL to define those
    types.

    This is similar to XSD but is Haskell-specific.

license:             MIT
license-file:        LICENSE
author:              Typeable.io contributors
maintainer:          makeit@typeable.io
category:            Data
build-type:          Simple
cabal-version:       >=1.22
homepage:            https://github.com/typeable/isogen-minimal-example
tested-with:         GHC == 7.10.3
                   , GHC == 8.0.2
                   , GHC == 8.2.1
extra-source-files:  CHANGELOG.md
                   , README.md

source-repository head
  type:     git
  location: git@github.com:typeable/isogen-minimal-example.git

library
  exposed-modules:     ExternalStuff
                     , Text.XML.Node
                     , Text.XML.ParentAttributes
  build-depends:       base >=4.8 && <5
                     , lens >= 4.13
                     , mtl >= 2.2
                     , semigroups >= 0.18
                     , text >= 1.2

  hs-source-dirs:      src

  default-language:    Haskell2010
  default-extensions:  CPP
                     , FlexibleInstances
                     , LambdaCase
                     , TemplateHaskell
                     , TupleSections
                     , TypeFamilies

test-suite spec
  type:               exitcode-stdio-1.0
  hs-source-dirs:     test
  main-is:            Main.hs
  other-modules:      TestDefs
  build-depends:      base
                    , QuickCheck
                    , data-default
                    , generic-arbitrary
                    , hspec
                    , isogen-minimal-example
                    , quickcheck-instances
                    , semigroups
                    , text
  default-language:   Haskell2010
  default-extensions:  CPP
                     , DeriveGeneric
                     , FlexibleInstances
                     , LambdaCase
                     , OverloadedStrings
                     , StandaloneDeriving
                     , TemplateHaskell
                     , TupleSections
                     , TypeFamilies
  ghc-options:        -Wall -fno-warn-missing-signatures
