name:                isogen-minimal-example
version:             0.2.1
synopsis:            Generate XML-isomorphic types
description:
    TemplateHaskell generators for XML-isomorphic data types, including
    instances for parsing and rendering. A convenient DSL to define those
    types.

    This is similar to XSD but is Haskell-specific.

license:             MIT
license-file:        LICENSE
author:              Typeable.io contributors
maintainer:          makeit@typeable.io
category:            Data
build-type:          Simple
cabal-version:       >=1.22
homepage:            https://github.com/typeable/isogen-minimal-example
tested-with:         GHC == 7.10.3
                   , GHC == 8.0.2
                   , GHC == 8.2.1
extra-source-files:  CHANGELOG.md
                   , README.md

source-repository head
  type:     git
  location: git@github.com:typeable/isogen-minimal-example.git

test-suite spec
  type:               exitcode-stdio-1.0
  hs-source-dirs:     test
  main-is:            Main.hs
  other-modules:      ExternalStuff
  build-depends:      base
                    , HUnit
                    , data-default
                    , generic-arbitrary
                    , hspec
                    , semigroups
                    , text
  default-language:   Haskell2010
  default-extensions:  CPP
                     , DeriveGeneric
                     , FlexibleInstances
                     , LambdaCase
                     , OverloadedStrings
                     , RankNTypes
                     , StandaloneDeriving
                     , TemplateHaskell
                     , TupleSections
                     , TypeFamilies
  ghc-options:        -Wall -fno-warn-missing-signatures
